--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon server.ts"
+    "dev": "nodemon server.ts"
   },
   "author": "Manish Basnet",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
+    "socket.io": "^4.8.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
